Fix navbar expanding too wide on desktop

--- a/css/style.css
+++ b/css/style.css
@@ -193,7 +193,7 @@ header {
 }
 .nav-white-bg {
   background-color: white;
-  box-shadow: 10px 2px 10px rgba(0, 0, 0, 0.1);
+  box-shadow: 10px 2tpx 10px rgba(0, 0, 0, 0.1);
 }
 .nav {
   position: fixed;
@@ -251,9 +251,12 @@ header {
   color: red;
 }
 
-@media (min-width: 750px) {
+@media (min-width: 800px) {
   .nav-hamburger {
     display: none;
+  }
+  body {
+    width: 100vw;
   }
   header {
     align-items: center;
@@ -277,6 +280,13 @@ header {
     align-items: center;
     min-height: 80px;
     padding: 0;
+  }
+}
+
+@media (min-width: 1150px) {
+  header {
+    justify-content: center;
+    gap: 19.5em;
   }
 }
 
